--- a/demo/demo1.twig
+++ b/demo/demo1.twig
@@ -70,7 +70,7 @@ http://www.gnu.org/licenses/gpl-3.0.html
     </head>
     <body>
         <div class="glQuery">
-            <canvas id="demo" type="glQuery" fullscreen="true" debug="true" partTo="../../" scene="test9.dae"></canvas>
+            <canvas id="demo" type="glQuery" fullscreen="true" debug="true" partTo="../../" scene="../../static/obj/test9.dae"></canvas>
             <div class="glQuery-gui">
                 <div class="glQuery-winmode">
                     <section class="container">
